Ruta partidos. Operaciones CRUD. Necesita usuario para la mayoria de CRUD. Filtrado de datos. Paginacion. Modelo de datos añadido.
